unit_tests/regression.suite/minustrue.err
integer i = -TRUE;
                 ^
(Line 1 char 18): ERROR: Syntax error
