unit_tests/regression.suite/minustrue.lsl
integer i = -TRUE;
default{timer(){}}
